trunk/Archive2/46/e3f0077c495103/output
main.cpp: In function 'int main()':
main.cpp:7:11: error: invalid initialization of non-const reference of type 'int&' from an rvalue of type 'int'
     foo(42);
           ^
main.cpp:2:6: note: in passing argument 1 of 'void foo(T&) [with T = int]'
 void foo(T&)
      ^
