trunk/Archive2/46/e3f0077c495103/main.cpp
template <class T>
void foo(T&)
{}

int main()
{
    foo(42);
}